# PayrollX-Solana

./: .cursorrules  .env.development  .gitignore  CICD_FIXES_REPORT.md  CI_CD_PIPELINE_FIXES_SUMMARY.md  CI_PACKAGE_LOCK_FIX.md  CODEBASE_REFACTORING_REPORT.md  COMPLETE_SETUP_GUIDE.md  COMPREHENSIVE_STATUS_REPORT.md  DATABASE_ARCHITECTURE_ANALYSIS.md  DEVELOPMENT.md  DOCKER_SETUP.md  FINAL_CI_CD_STATUS.md  FINAL_COMPLETION_REPORT.md  FINAL_SETUP_SUMMARY.md  FINAL_STATUS_REPORT.md  LINT_SCRIPTS_FIXES.md  LINT_WARNINGS_FIXES.md  NEXTJS_BUILD_FIXES.md  NEXTJS_BUILD_STATUS.md  NPM_NETWORK_CONNECTIVITY_FIXES.md  PACKAGES_ERROR_FIXES_REPORT.md  PORT_ASSIGNMENTS.md  PRODUCTION_DATABASE_MIGRATION_PLAN.md  README.md  RUST_UNUSED_IMPORT_FIX.md  RUST_WARNINGS_FIXES.md  SERVICE_STATUS_REPORT.md  SERVICE_STATUS_SUMMARY.md  SETUP_COMPLETE.md  SIMPLIFIED_CI_PIPELINE.md  TYPESCRIPT_CONFIG_FIXES.md  TYPESCRIPT_ERROR_FIXES.md  TYPESCRIPT_IMPORT_FIXES.md  ULTIMATE_COMPLETION_REPORT.md  WORKSPACE_BUILD_ORDER_FIX.md  dev.sh  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.yml  (+16 more)
.github/workflows/: ci.yml
apps/api-gateway/: Dockerfile  env.example  package.json  tsconfig.json
apps/auth-service/: .gitignore  Dockerfile  env.example  nest-cli.json  package.json  (+1 more)
monitoring/: prometheus.yml
programs/payroll-solana/: .gitignore  APPLE_SILICON_ISSUE.md  Anchor.toml  Cargo.toml  package.json  tsconfig.json
programs/payroll-solana/src/: lib.rs
programs/payroll-solana/tests/: payroll-solana.ts
scripts/: init-databases.sh  init-multiple-databases.sh  setup-system.sh
(+255 files in other folders)
