[package]
name = "payroll-solana"
version = "0.1.0"
description = "PayrollX Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payroll_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
